trying to fix body height on ios

--- a/src/style.scss
+++ b/src/style.scss
@@ -55,7 +55,7 @@ body {
     .body-wrapper {
         display: flex;
         flex-direction: column;
-        height: 100dvh;
+        height: 95dvh;
         overflow: visible;
         width: 100vw;
 
@@ -311,7 +311,7 @@ body {
                     height: 100%;
                     justify-content: flex-end;
                     gap: 8vw;
-                    padding-bottom: 5%;
+                    padding-bottom: 0%;
                     padding-left: 15vw;
                     width: 100%;
 
